[package]
name = "cep47"
version = "0.1.0"
edition = "2018"

[dependencies]
hex = { version = "0.4.3", default-features = false }
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../utils/contract-utils" }

[[bin]]
name = "cep47"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

