[package]
name = "staking_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { version = "0.4.3", default-features = false }
casper-contract = { version = "3.0.0", default-features = false }
casper-types = { version = "3.0.0", default-features = false }

contract-utils = { path = "../utils/contract-utils" }

[[bin]]
name = "staking_contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
